--- a/public/stat120/Day21.html
+++ b/public/stat120/Day21.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 120]
 
- October 29 2023
+ February 20 2024
 
 ---
 
@@ -76,9 +76,9 @@ class: middle
 
 # Central Limit Theorem for means: One sample
 
-.bql-list[
-
-The sampling distribution for a sample mean is approximately `\(N\left(\mu, S E_{\bar{x}}\right)\)`]
+.hljs[
+The sampling distribution for a sample mean, `\(\bar{x}\)`, is approximately `\(N\left(\mu, S E_{\bar{x}}\right)\)`
+]
 
 &lt;br&gt;
 
@@ -97,7 +97,7 @@ class: middle
 
 # Central Limit Theorem for means: Two independent samples:
 
-.bql-list[
+.hljs[
 The sampling distribution for a difference of two independent sample means is approximately `\(N\left(\mu_{1}-\mu_{2}, S E_{\bar{x}_{1}-\bar{x}_{2}}\right)\)`
 ]
 
@@ -115,7 +115,7 @@ class: middle
 
 # Academic Performance Index (API) 
 
-.bql-list[
+.hljs[
 Academic Performance Index (API) is a number reflecting a school’s performance on a statewide standardized test
   - simple random sample of `\(n=200\)` schools
   - variable `growth` measures the growth in API from 1999 to 2000 (API 2000 - API 1999).
@@ -144,19 +144,19 @@ high  low
 ```
 ]
 
-
 .code100[
 
 ```r
 library(dplyr)
 api %&gt;% 
   group_by(wealth) %&gt;% 
-  summarize(mean(growth), sd(growth))
+  summarize(mean = mean(growth), 
+            sd = sd(growth))
 # A tibble: 2 × 3
-  wealth `mean(growth)` `sd(growth)`
-  &lt;chr&gt;           &lt;dbl&gt;        &lt;dbl&gt;
-1 high             25.2         28.8
-2 low              38.8         30.0
+  wealth  mean    sd
+  &lt;chr&gt;  &lt;dbl&gt; &lt;dbl&gt;
+1 high    25.2  28.8
+2 low     38.8  30.0
 ```
 ]
 
@@ -177,13 +177,13 @@ ggplot(api, aes(x = growth, y = wealth)) + geom_boxplot() +
 
 ## Hypothesis Test: Can we use t-inference methods to compare mean growths?
 
-.bql.font80[
+.hljs[
 - Both samples sizes (98 and 102) can be deemed large 
 - No severe skewness (but two extreme outliers)
 ]
 
-.bqt.font80[
-- Estimated Standard Error : `\(SD_{\bar{x}_h - \bar{x}_l} = \sqrt{\dfrac{28.75380^2}{102} + \dfrac{29.95048^2}{98}} = 4.1544\)`
+.bql.font80[
+- Estimated Standard Error : `\(SE_{\bar{x}_h - \bar{x}_l} = \sqrt{\dfrac{28.75380^2}{102} + \dfrac{29.95048^2}{98}} = 4.1544\)`
 
 - Test statistics: `\(t = \dfrac{(25.24510 - 38.82653) - 0}{4.154404} = -3.2692\)`
 ]
@@ -196,7 +196,7 @@ ggplot(api, aes(x = growth, y = wealth)) + geom_boxplot() +
 
 
 ```r
-t.test(growth ~ wealth, data = api)
+t.test(growth ~ wealth, data = api) 
 ```
 
 ```
@@ -233,7 +233,7 @@ which(api$growth &gt; 120 )
 
 ```r
 library(dplyr)
-api %&gt;% slice(74,119)  
+*api %&gt;% slice(74,119)  # slice the corresponding rows from the dataset
            cds stype            name                 sname snum
 1 5.471911e+13     E Lincoln Element    Lincoln Elementary 5873
 2 1.975342e+13     E Washington Elem Washington Elementary 2543
@@ -253,11 +253,11 @@ api %&gt;% slice(74,119)
 
 ---
 
-# Remove Outliers
+# `t.test` with outliers removed
 
 
 ```r
-t.test(growth ~ wealth, data = api, subset = -c(74,119))
+*t.test(growth ~ wealth, data = api, subset = -c(74,119))
 ```
 
 ```
@@ -274,6 +274,8 @@ mean in group high  mean in group low
           22.56000           38.82653 
 ```
 
+--
+
 ..hljs[How does removing outliers influence `t-test` stat and p-value?]
 
 
@@ -282,7 +284,7 @@ mean in group high  mean in group low
 # Confidence Interval
 
 .pull-left[
-.bql-list.font90[
+.bql.font90[
 
 .hljs[
 .bolder[95% Confidence Interval from the output:]
@@ -305,7 +307,7 @@ mean in group high  mean in group low
 
 &lt;br&gt;
 
-.bql.font90[
+.bq.font90[
 .bold[Interpretation:] We are 95% confident that the mean API growth between 1999 and 2000 for all low wealth
 schools is anywhere from 8.96 points to 23.57 points higher than the mean API growth for all high wealth
 schools in California.
@@ -400,10 +402,9 @@ ggplot(tuition, aes(sample = Diff)) +
 
 ---
 
-## Tuition example
+## Tuition example: `t-test`
 
-
-
+.pull-left[
 
 ```r
 t.test(tuition$Diff)
@@ -419,12 +420,27 @@ sample estimates:
 mean of x 
 -3584.211 
 ```
+]
 
+.pull-right[
 
 ```r
-sd(tuition$Diff)/sqrt(19)  # SE for mean diff
-[1] 475.6813
+# alternate method
+t.test(tuition$Res, tuition$NonRes, paired = TRUE)
+
+	Paired t-test
+
+data:  tuition$Res and tuition$NonRes
+t = -7.5349, df = 18, p-value = 5.69e-07
+alternative hypothesis: true mean difference is not equal to 0
+95 percent confidence interval:
+ -4583.580 -2584.841
+sample estimates:
+mean difference 
+      -3584.211 
 ```
+
+]
 
 .bq.font90[
 
@@ -446,15 +462,15 @@ class: action
 
 &lt;br&gt;
 .bql[
-- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/)
 - Please do the class activity and let me know if you have any questions
 - Feel free to talk to your neighbor
 ]
 ]
 
-<div class="countdown" id="timer_bb1796a5" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_740ff737" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">25</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
     </textarea>
