--- a/public/stat220/Day21.html
+++ b/public/stat220/Day21.html
@@ -44,9 +44,9 @@ class: title-slide, middle
 
 # .fancy[Introduction to Classification]
 
-### .fancy[Spring 2023]
+### .fancy[Stat 220]
 
- May 15 2023
+ February 20 2024
 
 
 ---
@@ -62,7 +62,7 @@ Predicting what category a (future) observation falls into
 &lt;br&gt;
 --
 
-.bq.font90[**Examples:**
+.bqt.font90[**Examples:**
 - .bold[Astronomy:] Whether an exoplanet is habitable (or not)
 - .bold[Filtering:] Identify spam emails
 - .bold[Medicine:] Use lab results to determine who has a disease (or not)
@@ -458,7 +458,7 @@ fire_scaled &lt;- bake(fire_recipe, fire_raw)
  8      -0.593  0.610 fire    
  9      -1.97  -1.74  not fire
 10      -1.14  -0.324 not fire
-# … with 233 more rows
+# ℹ 233 more rows
 ```
 
 
@@ -577,7 +577,7 @@ class: action, middle
 .pull-right-60[
 &lt;br&gt;
 .bql[
-- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=41417)
+- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=43045)
 - Get the class activity 21.Rmd file
 - Work on activity 1
 - Ask me questions
@@ -585,9 +585,9 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_1c4f18e3" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_421650c6" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
     </textarea>
