--- a/static/stat120/Day21.html
+++ b/static/stat120/Day21.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 120]
 
- February 20 2024
+ February 21 2024
 
 ---
 
@@ -468,7 +468,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_740ff737" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_2b79b46e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">25</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
