--- a/static/stat220/Day21.html
+++ b/static/stat220/Day21.html
@@ -46,7 +46,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- February 20 2024
+ February 21 2024
 
 
 ---
@@ -93,7 +93,7 @@ class: middle
 - from June 2012 to September 2012
 ]
 
-.footnote[Click [here](https://archive.ics.uci.edu/ml/datasets/Algerian+Forest+Fires+Dataset++#) to learn more about the dataset]
+.footnote[Click [here](https://archive.ics.uci.edu/dataset/547/algerian+forest+fires+dataset) to learn more about the dataset]
 
 
 ---
@@ -585,7 +585,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_421650c6" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_88cbd8f1" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
